infrastructure/ibmcloud-galasadev-cluster/galasa-development/extensions/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extensions
  namespace: galasa-development
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: extensions
  template:
    metadata:
      name: extensions
      labels:
        app: extensions
    spec:
      containers:
        - image: harbor.galasa.dev/galasadev/galasa-extensions:main
          imagePullPolicy: Always
          name: extensions
          ports:
            - containerPort: 80
              name: extensions
