infrastructure/ibmcloud-galasadev-cluster/galasa-development/extensions/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: extensions
  namespace: galasa-development
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - development.galasa.dev
    secretName: galasa-wildcard-cert
  rules:
  - host: development.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: extensions
            port:
              number: 443
        path: /main/maven/extensions
        pathType: Prefix
